Projects page solved overflow

--- a/projects.css
+++ b/projects.css
@@ -187,8 +187,8 @@ body{
 
     .projects{
         width: 100%;
-        height: 200px;
-        /* background-color: grey; */
+        height: 150px;
+        background-color: grey;
     }
 
     .projects h5{
@@ -216,14 +216,14 @@ body{
 
     .project{
         width: 100%;
-        /* background-color: grey; */
+        background-color: grey;
         height: 180px;
     }
 
     .banner{
         width:  340px;
         position: relative;
-        left: 0px;
+        left: 5px;
         height: 150px;
     }
 
